--- a/y/index.html
+++ b/y/index.html
@@ -5,89 +5,60 @@
     <title>Paul Torres Personal Site</title>
 
 
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <!-- mdb bootstrap css -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css'></script>
-    <link rel"stylesheet" href="index.css">
 
+
+
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
+
+
+    <link rel="stylesheet" type='text/css'
+    href="stylesheets/style.css"></link>
+
+    <link href="https://fonts.googleapis.com/css?family=Convergence|Forum|Reenie+Beanie|Special+Elite" rel="stylesheet">
   </head>
   <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="container-fluid mainImage">
 
-      <img class="background" src="../images/backgroundZermatt.jpeg">
+      <div class="jumbotron jumbotron-fluid zermattBackground">
+        <div class ="row titlebox">
+          <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+            <div class="col-lg-3">
+            <h1 id="firstName">Paul</h1>
+
+            <h2 id="lastName">Torres</h2>
+            
+            <h4 id="jobTitle">Full Stack Developer</h4>
+            </div>
+        </div>
+      </div>
 
     </div>
-  </body>
+
   <!-- jQuery -->
-      <script
-      type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Bootstrap tooltips -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+      <!-- Bootstrap tooltips -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<!-- Material Design Bootstrap JavaScript -->
-<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/js/mdb.min.js'>
-</script>
+    <!-- Material Design Bootstrap JavaScript -->
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/js/mdb.min.js'>
+    </script>
 
+    <!-- My index.html js file -->
+    <!-- <script type="text/javascript"
+    src="javascripts/index.js"></script> -->
+  </body>
 </html>
-
-<style media="screen">
-  body {
-    font-family: Roboto, Arial, sans-serif;
-    background: #ECEFF1;
-    color: rgba(0,0,0,0.87);
-  }
-
-  a {
-    color: rgb(3,155,229);
-  }
-
-  #message {
-    max-width: 400px;
-    margin: 40px auto;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-    border-radius: 2px;
-    background: white;
-    padding: 16px 24px;
-  }
-
-  #message h1 {
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-    margin: 0 0 16px;
-  }
-
-  #message p {
-    font-weight: 300;
-    line-height: 150%;
-  }
-
-  #message ul {
-    list-style: none;
-    margin: 16px 0 0;
-    padding: 0;
-    text-align: center;
-  }
-
-  #message li a {
-    display: inline-block;
-    padding: 8px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 500;
-    background: rgb(3,155,229);
-    color: white;
-    border: 1px solid rgb(3,155,229);
-    border-radius: 3px;
-    font-size: 14px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-  }
-
-  .background {
-    width: 100%;
-
-  }
-</style>
