--- a/y/index.html
+++ b/y/index.html
@@ -34,12 +34,15 @@
             <h1 id="firstName">Paul</h1>
 
             <h2 id="lastName">Torres</h2>
-            
+
             <h4 id="jobTitle">Full Stack Developer</h4>
+            <h4  id="location">Denver, CO</h4>
             </div>
         </div>
       </div>
 
+    </div>
+    <div class="container-fluid projects">
     </div>
 
   <!-- jQuery -->
