--- a/y/index.html
+++ b/y/index.html
@@ -28,26 +28,33 @@
   <!-- navbar -->
 
 <!--Navbar-->
-<nav class=" navbar navbar-toggleable-md navbar-dark black bg-primary"
+<nav class=" navbar navbar-toggleable-md navbar-dark grey bg-primary"
 data-aos="fade-down" data-aos-duration="3000"
 >
   <div class="container-fluid">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
       </button>
       <a class="navbar-brand" href="#">
           <strong>PT</strong>
       </a>
-      <div class="collapse navbar-collapse" id="navbarNav1">
-          <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse text-center" id="navbarNav1">
+          <ul class="navbar-nav mr-auto text-center">
               <li class="nav-item active">
-                  <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link projNav">Projects
               </li>
               <li class="nav-item">
-                  <a class="nav-link">Features</a>
+                  <a class="nav-link">Skills</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link">Pricing</a>
+                  <a class="nav-link aboutNav">About Me</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link"
+                  href="https://drive.google.com/file/d/0B0Vxg6NA-SskU2lKNWhVOGt3UUE/view?usp=sharing">Resume</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link">Connect </a>
               </li>
               <li class="nav-item dropdown btn-group">
                   <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -101,6 +108,52 @@ data-aos="fade-down" data-aos-duration="3000"
         </div>
       </div>
     </div>
+    <div class="container-fluid text-center">
+      <h1 class="text-center aboutBanner" id="aboutBanner">
+        About Me
+      </h1>
+      <img class="paulMtElbert" src="images/paulMtElbert.jpg">
+      <hr class="aboutBar"></hr>
+      <div class="row">
+        <div class="col-lg-4"></div>
+          <p class="aboutInfo col-lg-4">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money.
+          </p>
+      </div>
+    </div>
+
+<!--Footer-->
+<footer class="page-footer grey center-on-small-only">
+
+    <!--Footer Links-->
+    <div class="container-fluid grey">
+        <div class="row">
+            <div class="social-section">
+          <ul>
+
+              <li><a href="https://www.linkedin.com/in/p-torres/"
+                class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a></li>
+              <li><a href="https://github.com/torrepaul315"
+                class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a></li>
+
+              <li><a href="https://www.instagram.com/hey_hey_lets_ski/?hl=en"
+                class="btn-floating btn-small btn-ins"><i class="fa fa-instagram"> </i></a></li>
+          </ul>
+      </div>
+
+    <!--/.Footer Links-->
+
+    <!--Copyright-->
+    <div class="footer-copyright">
+        <div class="container-fluid">
+            © 2017 Copyright: Paul Torres
+
+        </div>
+    </div>
+    <!--/.Copyright-->
+
+</footer>
+<!--/.Footer-->
+
 
   <!-- jQuery -->
 
