added email form, but need to make it fullstack to send moving to new branch

--- a/y/index.html
+++ b/y/index.html
@@ -91,7 +91,7 @@ data-aos="fade-down" data-aos-duration="3000"
     <h1 class="text-center projBanner" id="projBanner">
       projects
     </h1>
-
+    <hr class="aboutBar"></hr>
     <div class="container-fluid">
       <div class="">
         <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -112,6 +112,7 @@ data-aos="fade-down" data-aos-duration="3000"
       <h1 class="text-center aboutBanner" id="aboutBanner">
         About Me
       </h1>
+      <hr class="aboutBar"></hr>
       <img class="paulMtElbert" src="images/paulMtElbert.jpg">
       <hr class="aboutBar"></hr>
       <div class="row">
@@ -120,7 +121,20 @@ data-aos="fade-down" data-aos-duration="3000"
           </p>
       </div>
     </div>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4"></div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <form action="https://formspree.io/torrepaul@gmail.com"
+          method="POST">
+            <input type="text" name="name" placeholder="email message">
+            <input type="email" name="_replyto" placeholder="your reply email">
+            <input type="submit" value="Send">
+            <input type="hidden" name="_next" value="/thanks.html" />
+          </form>
+          </div>
+      </div>
+    </div>
 <!--Footer-->
 <footer class="page-footer grey center-on-small-only">
 
@@ -131,12 +145,16 @@ data-aos="fade-down" data-aos-duration="3000"
           <ul>
 
               <li><a href="https://www.linkedin.com/in/p-torres/"
-                class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a></li>
+                class="btn-floating btn-medium btn-li"><i class="fa fa-linkedin"> </i></a></li>
               <li><a href="https://github.com/torrepaul315"
                 class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a></li>
 
               <li><a href="https://www.instagram.com/hey_hey_lets_ski/?hl=en"
                 class="btn-floating btn-small btn-ins"><i class="fa fa-instagram"> </i></a></li>
+              <!-- a trailhead social icon in the mix....cause why not!?!?! -->
+
+                <!-- <li><a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"
+                class="btn-floating btn-small btn trailhead"><img src="images/trailheadLogo.jpg"></a></li> -->
           </ul>
       </div>
 
