--- a/y/thanks.html
+++ b/y/thanks.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Paul Torres Personal Site</title>
+    <meta http-equiv="Refresh" content="5;url=index.html">
 
 
 
