starting working on modals- working fine for rclone project but then did cut and paste....and started having difficulties switching to different branch to polish up nav bar for now

--- a/y/index.html
+++ b/y/index.html
@@ -94,14 +94,85 @@ data-aos="fade-down" data-aos-duration="3000"
     <hr class="aboutBar"></hr>
     <div class="container-fluid">
       <div class="">
-        <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4">
-          <!-- <img class="img-responsive" src="images/snowflakeBlog.jpg"> -->
+        <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#basicExample">
+
           <h1 class="pTitle text-center">Paul's Opinionated</h1>
         </div>
+
+
+
+        <!-- Button trigger modal -->
+        <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#basicExample">
+            Launch demo modal
+        </button> -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="basicExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <!--Content-->
+                <div class="modal-content">
+                    <!--Header-->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title w-100" id="myModalLabel">Paul's Opinionated Reddit Clone</h4>
+                    </div>
+                    <!--Body-->
+                    <div class="modal-body">
+                      A full-stack Angular Js blog site that allows visitors to create, upvote, downvote and add comments.
+                      <br></br>
+                      Technologies used:
+                      Front end- Angular, Material Design Bootstrap, JavaScript, HTML5, CSS, jquery, moment.js
+                      Back end- PostGreSQL, knex.js, Node.js/Express
+                    </div>
+                    <!--Footer-->
+                    <div class="modal-footer">
+                      <a href="https://paul-rclone.herokuapp.com/">Visit deployed Site
+                    </div>
+                </div>
+                <!--/.Content-->
+            </div>
+        </div>
+        <!-- Modal -->
+
+
+
+
+
 
         <div id="centerDiv" class="alumnize projects col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <h1 class="pTitle text-center">Alumnize</h1>
         </div>
+
+        <div class="modal fade" id="basicExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <!--Content-->
+                <div class="modal-content">
+                    <!--Header-->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title w-100" id="myModalLabel">Paul's Opinionated Reddit Clone</h4>
+                    </div>
+                    <!--Body-->
+                    <div class="modal-body">
+                      A full-stack Angular Js blog site that allows visitors to create, upvote, downvote and add comments.
+                      <br></br>
+                      Technologies used:
+                      Front end- Angular, Material Design Bootstrap, JavaScript, HTML5, CSS, jquery, moment.js
+                      Back end- PostGreSQL, knex.js, Node.js/Express
+                    </div>
+                    <!--Footer-->
+                    <div class="modal-footer">
+                      <a href="https://alumnize-9cdd1.firebaseapp.com/#/">Visit deployed Site
+                    </div>
+                </div>
+                <!--/.Content-->
+            </div>
+        </div>
+        <!-- Modal -->
 
         <div class="gBlog projects  col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <h1 class="pTitle text-center">SnowflakeBlog</h1>
