--- a/y/index.html
+++ b/y/index.html
@@ -77,7 +77,7 @@ data-aos="fade-down" data-aos-duration="3000"
       <div class="jumbotron jumbotron-fluid zermattBackground">
         <div class ="row titlebox">
           <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-            <div class="col-lg-3">
+            <div class="col-lg-4 col-md-4 text-center">
             <h1 id="firstName">Paul</h1>
 
             <h2 id="lastName">Torres</h2>
