--- a/y/index.html
+++ b/y/index.html
@@ -28,12 +28,12 @@
   <!-- navbar -->
 
 <!--Navbar-->
-<nav class=" navbar navbar-toggleable-md navbar-dark grey bg-primary"
+<!-- <nav class=" navbar navbar-toggleable-md navbar-dark grey bg-primary"
 data-aos="fade-down" data-aos-duration="3000"
 >
   <div class="container-fluid">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-          <!-- <span class="navbar-toggler-icon"></span> -->
+
       </button>
       <a class="navbar-brand" href="#">
           <strong>PT</strong>
@@ -55,20 +55,40 @@ data-aos="fade-down" data-aos-duration="3000"
               </li>
               <li class="nav-item">
                   <a class="nav-link  connectNav">Connect </a>
-              </li>
-              <!-- <li class="nav-item dropdown btn-group">
-                  <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
-                      <a class="dropdown-item">Action</a>
-                      <a class="dropdown-item">Another action</a>
-                      <a class="dropdown-item">Something else here</a>
-                  </div>
               </li> -->
-          </ul>
 
-      </div>
-  </div>
-</nav>
+              <nav class="navbar navbar-default navbar-inverse">
+            <div class="container-fluid">
+              <div class="row balance">
+              <div class="col-lg-1 navbarInit">PT</div>
+              <div class="col-lg-9"></div>
+              <div class="navbar-header">
+                <!-- <a class="navbar-brand" href="#">
+                  <i class="devicon-angularjs-plain"></i>
+
+                </a> -->
+                <li class="dropdown align-right">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENTS<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li class='projNav'>Projects</li>
+                      <li role="separator" class="divider"></li>
+                      <li class='aboutNav'>About Me</li>
+                      <li role="separator" class="divider"></li>
+                      <li class='connectNav'>Connect</li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="https://drive.google.com/file/d/0B0Vxg6NA-SskU2lKNWhVOGt3UUE/view?usp=sharing">Resume</a></li>
+                      <!-- this is where you'll add in a skills section, and maybe just list out the social icons here or in the nav bar itself!-->
+                      <!-- <li role="separator" class="divider"></li>
+                      <li><a href="#">One more separated link</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">One more separated link</a></li> -->
+                    </ul>
+                  </li>
+              </div>
+            </div>
+            </div>
+          </nav>
+
 
 
     <!-- main jumbotron -->
