tweaked name on proj

--- a/y/index.html
+++ b/y/index.html
@@ -135,7 +135,7 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4 class="modal-title w-100" id="myModalLabel">Paul's Opinionated Reddit Clone</h4>
+                        <h4 class="modal-title w-100" id="myModalLabel">Front Range Trail Board</h4>
                     </div>
                     <!--Body-->
                     <div class="modal-body">
@@ -147,7 +147,7 @@
                     </div>
                     <!--Footer-->
                     <div class="modal-footer">
-                      <a href="https://paul-rclone.herokuapp.com/">Visit deployed Site</a>
+                      <a href="https://front-range-trail-board.herokuapp.com/">Visit deployed Site</a>
                     </div>
                 </div>
                 <!--/.Content-->
@@ -358,7 +358,7 @@
       </div>
     </div>
 
-  
+
   <!-- </div>
   </div> -->
 <!--Footer-->
