nother small tweak

--- a/y/index.html
+++ b/y/index.html
@@ -123,7 +123,7 @@
       <div class="">
         <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#RedditExample">
 
-          <h1 class="pTitle text-center">Paul's Opinionated</h1>
+          <h1 class="pTitle text-center">Front Range Trail Board</h1>
         </div>
         <!-- Modal for Paul's Opinionated-->
         <div class="modal fade" id="RedditExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
